RESOLVED FIXED200578
[GStreamer][WebRTC]: openh264 encoder bitrate is in bits per second
https://bugs.webkit.org/show_bug.cgi?id=200578
Summary [GStreamer][WebRTC]: openh264 encoder bitrate is in bits per second
Thibault Saunier
Reported 2019-08-09 09:18:38 PDT
[GStreamer][WebRTC]: openh264 encoder bitrate is in bits per second
Attachments
Patch (1.58 KB, patch)
2019-08-09 09:20 PDT, Thibault Saunier
no flags
Patch for landing (1.60 KB, patch)
2019-08-12 14:06 PDT, Thibault Saunier
no flags
Patch for landing (1.61 KB, patch)
2019-08-12 14:45 PDT, Thibault Saunier
no flags
Thibault Saunier
Comment 1 2019-08-09 09:20:07 PDT
WebKit Commit Bot
Comment 2 2019-08-10 04:18:36 PDT
Comment on attachment 375926 [details] Patch Rejecting attachment 375926 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 375926, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=375926&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=200578&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 375926 from bug 200578. Fetching: https://bugs.webkit.org/attachment.cgi?id=375926 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: 4cbc638d3a4bd8580a31f95f59437cf717b64db8 and refs/remotes/origin/master differ, using rebase: :040000 040000 1627e8b37d4143023ed25ab8d8957ebe8e51d225 03c718c1c55fdbee711ab95572379ae84910054d M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: 4cbc638d3a4bd8580a31f95f59437cf717b64db8 and refs/remotes/origin/master differ, using rebase: :040000 040000 1627e8b37d4143023ed25ab8d8957ebe8e51d225 03c718c1c55fdbee711ab95572379ae84910054d M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: https://webkit-queues.webkit.org/results/12890482
Philippe Normand
Comment 3 2019-08-10 04:43:18 PDT
Looks like this needs a rebase? ^^
Thibault Saunier
Comment 4 2019-08-12 14:06:57 PDT
Created attachment 376093 [details] Patch for landing
WebKit Commit Bot
Comment 5 2019-08-12 14:38:04 PDT
Comment on attachment 376093 [details] Patch for landing Rejecting attachment 376093 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 376093, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output: https://webkit-queues.webkit.org/results/12899921
Thibault Saunier
Comment 6 2019-08-12 14:45:10 PDT
Created attachment 376095 [details] Patch for landing
WebKit Commit Bot
Comment 7 2019-08-15 06:38:33 PDT
Comment on attachment 376095 [details] Patch for landing Clearing flags on attachment: 376095 Committed r248712: <https://trac.webkit.org/changeset/248712>
WebKit Commit Bot
Comment 8 2019-08-15 06:38:35 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2019-08-15 06:39:17 PDT
Note You need to log in before you can comment on or make changes to this bug.