[GStreamer][WebRTC]: openh264 encoder bitrate is in bits per second https://bugs.webkit.org/show_bug.cgi?id=200578

Patch by Thibault Saunier <tsaunier@igalia.com> on 2019-08-15
Reviewed by Philippe Normand.

Not really testable as is.

* platform/mediastream/libwebrtc/GStreamerVideoEncoder.cpp:
(gst_webrtc_video_encoder_class_init):

Canonical link: https://commits.webkit.org/214496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248712 268f45cc-cd09-0410-ab3c-d52691b4dbfc